# lab

./: .gitignore  test.zig
apple/capture/: demo.m  gpu_capture_app  gpu_capture_demo.m
apple/simd/: simd  simd.c
asdasd/asdasd/: ContentView.swift  asdasdApp.swift
asdasd/asdasd.xcodeproj/: project.pbxproj
c/decorator/: makefile  one  one.c
c/fn/: fn.c  main
c/godbolt/: see  test  test.c
c/mem/: main  main.c  region.c  sbrk.c  unique.c  vm.c
c/pointer_size/: main  p_size.c
c/simd/: simd_neon  simd_neon.c
c/test/: time  time.c
concurrency/async_example/: Cargo.toml  one.txt  out.txt  three.txt
concurrency/kotlin/: FlowExample.kt  flow_builder_bytecode.txt  main_bytecode.txt  out.txt  state.kt
cuda/week1/: vec_add.cu
db/postgres/: .env  docker-compose.yml
deployments/flink/: docker-compose.yml
deployments/kafka/: docker-compose.yml
deployments/keycloak/: .env  docker-compose.yml
deployments/lgtm/: docker-compose.yml
deployments/mongo1/: mongodb-configmap.yaml  mongodb-namespace.yaml
deployments/postgres/: .env  docker-compose.yml
dismantle_bettle/: FIFOType.zig  fifo.zig  test.zig  typeof.zig
elixir/slacky/: .gitignore  (+2 more)
go/: test.go
kafka/: docker-compose.yml
modular/: notes.txt
mojo/: checker.mojo  noob1.mojo
poetry/poetry-demo/: pyproject.toml
poetry/poetry-demo/src/poetry_demo/: __init__.py  main.py
python/: test.py
rust/dice_server/: Cargo.toml
rust/dice_server/src/: main.rs
scripts/: sc.sh  zigv.sh
sdl3/: triangle.c  version_check
src/: main.zig
tcl/: one.tcl
tests/: metal  ray.c
zig/: closure.zig
(+1356 files in other folders)
