[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "ozzyozbourne",email = "khanosaid726@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langgraph>=0.5.0",
    "langsmith>=0.4.4",
    "langchain-google-genai>=2.1.6"
]

[tool.poetry]
packages = [{include = "poetry_demo", from = "src"}]

[tool.poetry.scripts]
start = "poetry_demo.main:run"  

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
