[package]
name = "dice_server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.45.1", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.14", features = ["full"] }
rand = "0.9.1"

opentelemetry = { version = "0.30.0", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "trace", "metrics", "logs"] }

tonic = "0.13.1"
base64 = "0.22.1"
hostname = "0.4.1"

